Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-8512

Data cache tests failing on older CentOS 6 versions

    XMLWordPrintableJSON

Details

    Description

      They are failing with errors like:

      Error: Data dir /tmp/data-cache-test.0 is on an ext4 filesystem vulnerable to KUDU-1508.
      
          custom_cluster.test_data_cache.TestDataCache.test_data_cache_deterministic[protocol: beeswax | exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 0, 'disable_codegen': False, 'abort_on_error': 1, 'exec_single_node_rows_threshold': 0} | table_format: text/none]
          DataCacheTest.TestBasics
          DataCacheTest.RotateFiles
          DataCacheTest.RotateAndDeleteFiles
          DataCacheTest.Eviction
          DataCacheTest.MultiThreadedNoMisses
          DataCacheTest.MultiThreadedWithMisses
          DataCacheTest.MultiPartitions
          DataCacheTest.LargeFootprint
          FilesystemUtil.DirEntryTypes
          custom_cluster.test_data_cache.TestDataCache.test_data_cache[protocol: beeswax | exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 0, 'disable_codegen': False, 'abort_on_error': 1, 'exec_single_node_rows_threshold': 0} | table_format: text/none]
      

      Can we disable these tests on affected systems?

      Attachments

        Issue Links

          Activity

            People

              kwho Michael Ho
              tarmstrong Tim Armstrong
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: